Fix 'umbrello stopped working to the open a file try open another'.

There is still room for improvements in the case where the result from
dynamic_cast is 0 and used unconditional.

BUG:355009
FIXED-IN:2.20.1 (KDE Applications 16.08.1)